--- a/2020/JupyterNotebook/day01/AOC2020D01.ipynb
+++ b/2020/JupyterNotebook/day01/AOC2020D01.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "(1825, 195, 355875)\n"
      ]
@@ -29,12 +29,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "(346, 1380, 294, 140379120)\n"
      ]
@@ -60,7 +60,8 @@
    "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "name": "",
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
