--- a/2020/JupyterNotebook/day02/AOC2020D02.ipynb
+++ b/2020/JupyterNotebook/day02/AOC2020D02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,42 +11,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "469 good passwords\n"
+      "469 good passwords\n469 good passwords\n"
      ]
     }
    ],
    "source": [
     "# Part 1 : \n",
-    "good_passwords = []\n",
-    "\n",
-    "for input in puzzle_input:\n",
-    "    min_occurence = int(input.split(' ')[0].split('-')[0])\n",
-    "    max_occurence = int(input.split(' ')[0].split('-')[1])\n",
-    "    check_letter = (input.split(' ')[-2]).split(':')[0]\n",
-    "    password = input.split(' ')[-1]\n",
-    "    letters = {}\n",
-    "    for letter in password:\n",
-    "        if not letter in letters:\n",
-    "            letters[letter] = 1\n",
-    "        else:\n",
-    "            letters[letter] += 1\n",
-    "    if check_letter in letters and letters[check_letter] >= min_occurence and letters[check_letter] <= max_occurence:\n",
-    "        good_passwords += [password]\n",
-    "\n",
-    "print(len(good_passwords), \"good passwords\")"
+    "print(len([p for p in [(password, len([l for l in password[1] if password[0] == l])) for password in [(input.split(' ')[-2].split(':')[0], input.split(\" \")[-1], int(input.split(' ')[0].split('-')[0]), int(input.split(' ')[0].split('-')[1])) for input in puzzle_input]] if p[1] <= p[0][3] and p[1] >= p[0][2]]), \"good passwords\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
@@ -58,18 +46,7 @@
    ],
    "source": [
     "# Part 2 : \n",
-    "good_passwords = []\n",
-    "\n",
-    "for input in puzzle_input:\n",
-    "    password = input.split(' ')[-1]\n",
-    "    first_letter = password[int(input.split(' ')[0].split('-')[0]) - 1]\n",
-    "    last_letter = password[int(input.split(' ')[0].split('-')[1]) - 1]\n",
-    "    check_letter = (input.split(' ')[-2]).split(':')[0]\n",
-    "    letters = {}\n",
-    "    if first_letter != last_letter and (first_letter == check_letter or last_letter == check_letter):\n",
-    "            good_passwords += [password]\n",
-    "\n",
-    "print(len(good_passwords), \"good passwords\")"
+    "print(len([password[1] for password in [(input.split(' ')[-2].split(':')[0], input.split(\" \")[-1], int(input.split(' ')[0].split('-')[0]), int(input.split(' ')[0].split('-')[1])) for input in puzzle_input] if password[1][password[2] - 1] != password[1][password[3] - 1] and (password[1][password[2] - 1] == password[0] or password[1][password[3] - 1] == password[0])]), \"good passwords\")"
    ]
   },
   {
