--- a/2020/JupyterNotebook/day02/AOC2020D02.ipynb
+++ b/2020/JupyterNotebook/day02/AOC2020D02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -20,7 +20,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "469 good passwords\n469 good passwords\n"
+      "469 good passwords\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
