--- a/2020/JupyterNotebook/day05/AOC2020D05.ipynb
+++ b/2020/JupyterNotebook/day05/AOC2020D05.ipynb
@@ -9,10 +9,10 @@
    "outputs": [],
    "source": [
     "year = '2020'\n",
-    "day = '02'\n",
+    "day = '05'\n",
     "\n",
     "with open('..\\..\\Input\\day{1}\\AOC{0}D{1}_input.txt'.format(year, day), 'r') as reader:\n",
-    "    puzzle_input =  [password for password in reader.read().split('\\n')]"
+    "    puzzle_input = [input_line for input_line in reader.read().split('\\n')]"
    ]
   },
   {
@@ -26,13 +26,13 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Part 1 answer : 469\n"
+      "Part 1 answer : 770\n"
      ]
     }
    ],
    "source": [
-    "# Part 1 : \n",
-    "print('Part 1 answer :', len([p for p in [(password, len([l for l in password[1] if password[0] == l])) for password in [(input.split(' ')[-2].split(':')[0], input.split(\" \")[-1], int(input.split(' ')[0].split('-')[0]), int(input.split(' ')[0].split('-')[1])) for input in puzzle_input]] if p[1] <= p[0][3] and p[1] >= p[0][2]]))"
+    "# Part 1 :\n",
+    "print('Part 1 answer :', len(puzzle_input))"
    ]
   },
   {
@@ -44,13 +44,13 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Part 2 answer : 267\n"
+      "Part 2 answer : 770\n"
      ]
     }
    ],
    "source": [
-    "# Part 2 : \n",
-    "print('Part 2 answer :', len([password[1] for password in [(input.split(' ')[-2].split(':')[0], input.split(\" \")[-1], int(input.split(' ')[0].split('-')[0]), int(input.split(' ')[0].split('-')[1])) for input in puzzle_input] if password[1][password[2] - 1] != password[1][password[3] - 1] and (password[1][password[2] - 1] == password[0] or password[1][password[3] - 1] == password[0])]))"
+    "# Part 2 :\n",
+    "print('Part 2 answer :', len(puzzle_input))"
    ]
   }
  ],
