--- a/2021/JupyterNotebook/day02/AOC2021D02.ipynb
+++ b/2021/JupyterNotebook/day02/AOC2021D02.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "year = '2020'\n",
+    "year = '2021'\n",
     "day = '02'\n",
     "\n",
     "with open('..\\..\\Input\\day{1}\\AOC{0}D{1}_input.txt'.format(year, day), 'r') as reader:\n",
@@ -23,16 +23,16 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Part 1 answer : 469\n"
+      "Part 1 answer : 1989265\n"
      ]
     }
    ],
    "source": [
     "# Part 1 : \n",
-    "print('Part 1 answer :', len([p for p in [(password, len([l for l in password[1] if password[0] == l])) for password in [(input.split(' ')[-2].split(':')[0], input.split(\" \")[-1], int(input.split(' ')[0].split('-')[0]), int(input.split(' ')[0].split('-')[1])) for input in puzzle_input]] if p[1] <= p[0][3] and p[1] >= p[0][2]]))"
+    "print('Part 1 answer :', sum([item[1] for item in [[input.split(' ')[0],int(input.split(' ')[1])] for input in puzzle_input] if item[0] == \"forward\"])*(sum([item[1] for item in [[input.split(' ')[0],int(input.split(' ')[1])] for input in puzzle_input] if item[0] == \"down\"])-sum([item[1] for item in [[input.split(' ')[0],int(input.split(' ')[1])] for input in puzzle_input] if item[0] == \"up\"])))"
    ]
   },
   {
@@ -41,16 +41,29 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Part 2 answer : 267\n"
+      "Part 2 answer : 2089174012\n"
      ]
     }
    ],
    "source": [
-    "# Part 2 : \n",
-    "print('Part 2 answer :', len([password[1] for password in [(input.split(' ')[-2].split(':')[0], input.split(\" \")[-1], int(input.split(' ')[0].split('-')[0]), int(input.split(' ')[0].split('-')[1])) for input in puzzle_input] if password[1][password[2] - 1] != password[1][password[3] - 1] and (password[1][password[2] - 1] == password[0] or password[1][password[3] - 1] == password[0])]))"
+    "# Part 2 :\n",
+    "depth = 0\n",
+    "horizontal_position = 0\n",
+    "aim = 0\n",
+    "for input in puzzle_input:\n",
+    "    instruction = input.split(\" \")[0]\n",
+    "    command = int(input.split(\" \")[1])\n",
+    "    if instruction == \"forward\":\n",
+    "        horizontal_position += command\n",
+    "        depth += aim * command\n",
+    "    elif instruction == \"down\":\n",
+    "        aim += command\n",
+    "    elif instruction == \"up\":\n",
+    "        aim -= command\n",
+    "print('Part 2 answer :', horizontal_position * depth)"
    ]
   }
  ],
@@ -70,7 +83,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
